@@ -1,5 +1,11 @@
 2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance variant pretty printing.
+	* include/liboptimization/util.hxx: Handle variant
+        on pointers.
+
+2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Compute problem infinity.
 	* include/liboptimization/problem.hh,
 	* include/liboptimization/problem.hxx: Implement infinity method.
